--- a/MusicPlayer.css
+++ b/MusicPlayer.css
@@ -122,11 +122,12 @@ a:visited {
 }
 
 .nav {
+    color: white;
     float: left;
-    height: 80vh;
+    height: 85vh;
     width: 20%;
     min-width: 200px;
-    background-color: #001F2E;
+    background-color: #002d44;
     overflow-y: auto;
     box-shadow: 5px 0px 10px #00263C;
 }
@@ -139,8 +140,8 @@ a:visited {
 .footer {
     position: fixed;
     bottom: 0;
-    background: #001F2E;
-    height: 20vh;
+    background: #002d44;
+    height: 15vh;
     width: 100%;
     box-shadow: 0px -5px 10px #00263C;
 }
@@ -149,8 +150,8 @@ a:visited {
     padding: 2%;
     color: white;
     width: 80%;
-    height: 80vh;
-    background-color: #000000;
+    height: 85vh;
+    background-color: #001925;
     overflow-y: auto;
 }
 
@@ -163,11 +164,24 @@ a:visited {
 }
 
 .nav a {
-    color: #007EA7;
+    color: #0079fe;
     margin: 2% 0 2% 10%;
-    font-size: 125%;
+    font-size: 115%;
 }
 
 .nav a:hover {
     color: #00bdfc;
+}
+
+.whitet {
+    color: white;
+}
+
+.logo {
+    text-align: center;
+    margin: 5%;
+}
+
+.LogoAudio {
+    width: 20%;
 }
