--- a/MusicPlayer.css
+++ b/MusicPlayer.css
@@ -173,6 +173,32 @@ a:visited {
     text-align: right;
 }
 
+.Hiddenbox {
+    position: absolute;
+    left: -9999px;
+}
+
+input[type=radio]:checked + label>img {
+    border: 1px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 3px 3px #0079fe;
+}
+
+input[type=radio] + label>img {
+    width: 150px;
+    height: 150px;
+    transition: 500ms all;
+}
+
+input[type=radio]:checked + label>img {
+    transform:
+        rotateZ(-10deg) rotateX(10deg);
+}
+
+.Avatar {
+    width: 50px;
+}
+
 #ImgPfl {
     width: 50px;
     border-radius: 50%;
@@ -209,3 +235,51 @@ a:visited {
 .LogoAudio {
     width: 20%;
 }
+
+.profil {
+    display: none;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+      border: 1px solid white;
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #001925;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: #0079fe;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
